add publisher files